# pdf-data-extractor

./: .gitignore  README.MD  app.py  doc_template.py  hello.py  parser.py  pyproject.toml  requirements.txt
